--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -1,51 +1,11 @@
-/* === OVERALL LAYOUT RULES === */
-
-header section {
-  max-width: 80%;
-  float: left;
-  padding: 0 0 .2em 1em;
+.content-container {
+  margin: 0 auto;
+  max-width: 768px;
+  width: 100%;
 }
 
-select {
-  width: 90%;
-  margin: .2em 5%;
-}
-
-img {
-  max-width: 100%;
-}
-
-
-/* === FLOATING AND CLEARFIX === */
-
-.pull-left {
-  float: left;
-}
-
-.pull-right {
-  float: right;
-}
-
-.clearfix::after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
-/* === MEDIA QUERY === */
-
-@media only screen and (min-width: 640px) {
-  header section {
-    padding: .1em .1em .1em 2em;
-    float: none;
-  }
-
-  select {
-    width: 15em;
-    margin: .2em .2em;
-  }
-
-  #filters li {
-    display: inline;
-  }
+.content-container-inner {
+  width: 92.1875%;
+  padding-top: 1em;
+  margin: 0 auto;
 }
