--- a/views/master.ejs
+++ b/views/master.ejs
@@ -12,18 +12,22 @@
     <link rel="stylesheet" href="/styles/icons.css">
 </head>
 <body>
-    hello world, view the following books. Number of books: <%= items.length %>
-    <ul>
-    <% items.forEach ( item => { %>
-        <li>
-            <img src="<%= item.image_url %>">
-            <p><%= item.title %></p>
-            <p><%= item.author %></p>
-        </li>
-    <% }); %>
-    </ul>
-
-
+    <header>
+        <div class="site-title">
+            <h1>Best Books!</h1>
+            <nav>
+                <a href="#" class="icon-menu navigation"></a>
+            </nav>
+        </div>
+        <div class="page-title">
+            <h2>Saved Books</h2>
+        </div>
+    </header>
+    <div class="content-container">
+        <div class="content-container-inner">
+            <% include home.ejs %>
+        </div>
+    </div>  
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script src="/scripts/app.js"></script>
 </body>
