--- a/public/styles/base.css
+++ b/public/styles/base.css
@@ -1,11 +1,9 @@
-/* === BASE RULES === */
-
 body {
-  line-height: 1.5;
-  font-size: 100%;
-  color: #313131;
+  background-color: #ccc;
+  font-family: sans-serif;
+  font-size: 20px;
 }
 
-main {
-  margin: 0 20px;
+img {
+  max-width: 100%;
 }
