--- a/public/styles/modules.css
+++ b/public/styles/modules.css
@@ -1,137 +1,72 @@
-/* === OVERALL MODULE RULES === */
+/* site title, menu */
 
-body > header {
-  background: #FFEAAA;
+.site-title {
+  background-color: black;
+  color: white;
+  font-size: 1.5em;
+  padding: .5em .2em;
+  overflow: hidden;
+}
+
+.site-title h1 {
+  float: left;
 }
 
 nav {
-  padding: 0.1em;
-}
-
-nav ul {
-  display: none;
-  padding: 0;
-  list-style: none;
-  clear: both;
-}
-
-nav:hover ul {
-  display: block;
-}
-
-nav li {
-  margin-right: .4em;
-  font-size: 1.5em;
-  padding: .5em .2em;
-  border-bottom: 1px solid #ccc;
-}
-
-/* === ARTICLE FORMATTING === */
-
-address {
-  color: #777;
-  display: inline-block;
-}
-
-address a {
-  font-weight: bold;
-  text-decoration: none;
-}
-
-#article-export label {
-  font-size: .8em;
-  font-style: italic;
-  color: #ccc;
-}
-
-/* === TEXT STYLES === */
-
-p {
-  font-size: 1em;
-}
-
-/* === LINK STYLES === */
-
-a, a:link, a:active {
-  text-decoration: none;
-  color: #777;
-}
-
-a:hover, a:focus {
-  color: #29506D;
-}
-
-/* === FORM STYLES === */
-
-label {
-  font-size: 3em;
-}
-
-input {
-  width: 100%;
-  margin: .5em 0;
-  border: 1px solid #ccc;
-  border-width: 0 0 1px 0;
-  border-radius: 0;
-}
-
-input[type="checkbox"] {
-  width: .28em;
-  height: .28em;
-  font-size: 3em;
-}
-
-textarea {
-  width: 100%;
-  margin: .5em 0;
-  font-size: 2em;
-  border: 1px solid #ccc;
-  border-radius: 0;
-}
-
-input:invalid, textarea:invalid {
-  border-color: #AE3F3C;
-}
-
-input:valid, textarea:valid {
-  border-color: #89CB8E;
-}
-
-/* === ICON FONT === */
-
-.icon-menu {
-  font-size: 3em;
   float: right;
 }
 
-/* === FILTER STYLES === */
-
-#filters {
-  padding: 0;
-  list-style: none;
+.icon-menu.navigation {
+  color: white;
+  text-decoration: none;
 }
 
-/* === MEDIA QUERY === */
+/* page title */
 
-@media only screen and (min-width: 640px) {
-  .icon-menu {
-    display: none;
-  }
+.page-title {
+  background-color: rgb(88, 88, 88);
+  color: white;
+  padding: .5em;
+  text-align: center;
+}
 
-  nav {
-    padding: .2em .2em .2em 2em;
-  }
+/* book cards */
 
-  nav ul {
-    display: block;
-  }
+.book-card {
+  background: rgba(255, 255, 255, .5);
+  border-radius: 2px;
+  box-shadow: 2px 2px 2px rgba(0, 0, 0, .2);
+  padding: 1em;
+  margin: 1em 0;
+  text-align: center;
+}
 
-  nav ul li {
-    display: inline;
-    border-bottom: none;
-  }
+.book-card img {
+  border: 5px solid white;
+}
 
-  nav ul li:hover a {
-    color: #29506D;
-  }
+.book-card h1,
+.book-card p {
+  margin: .5em 0;
+}
+
+.book-card h1 {
+  color: white;
+  font-size: 1.2em;
+  text-shadow: 1px 1px 3px rgba(0,0,0,.7);
+}
+
+.book-card .author {
+  font-style: italic;
+}
+
+.book-card .button {
+  background-color: black;
+  border-radius: 2px;
+  color: white;
+  display: block;
+  margin: 1em auto;
+  padding: 1em 1.5em;
+  text-decoration: none;
+  width: fit-content;
 }
