--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,12 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-</head>
-<body>
-    HOME
-</body>
-</html>
+Number of books: <%= items.length %>
+<ul>
+<% items.forEach ( item => { %>
+    <li>
+        <section class="book-card">
+            <img src="<%= item.image_url %>">
+            <h1><%= item.title %></h1>
+            <p class="author"><%= item.author %></p>
+            <a href="#" class="button">View Details</a>
+        </section>
+    </li>
+<% }); %>
+</ul>
