--- a/views/pages/show.ejs
+++ b/views/pages/show.ejs
@@ -1,6 +1,1 @@
-<section class="book-card">
-    <img src="<%= items[0].image_url %>">
-    <h1><%= items[0].title %></h1>
-    <p class="author"><%= items[0].author %></p>
-    <a href="#" class="button">View Details</a>
-</section>
+<%- include ../partials/book-card.ejs %>
