adding styles and created styles.md

--- a/public/styles/base.css
+++ b/public/styles/base.css
@@ -1,5 +1,6 @@
 body {
-  background-color: #ccc;
+  background-color: #C1BECA;
+  color: #0B1B18;
   font-family: sans-serif;
   font-size: 20px;
 }
