--- a/public/styles/modules.css
+++ b/public/styles/modules.css
@@ -1,7 +1,7 @@
 /* site title, menu */
 
 .site-title {
-  background-color: black;
+  background-color: #06460D;
   color: white;
   font-size: 1.5em;
   padding: .5em .2em;
@@ -24,7 +24,7 @@ nav {
 /* page title */
 
 .page-title {
-  background-color: rgb(88, 88, 88);
+  background-color: rgb(6, 70, 13);
   color: white;
   padding: .5em;
   text-align: center;
