--- a/views/master.ejs
+++ b/views/master.ejs
@@ -10,11 +10,12 @@
     <link rel="stylesheet" href="/styles/layout.css">
     <link rel="stylesheet" href="/styles/modules.css">
     <link rel="stylesheet" href="/styles/icons.css">
+    <link href="https://fonts.googleapis.com/css?family=Permanent+Marker|Quicksand:400,700" rel="stylesheet">
 </head>
 <body>
     <header>
         <div class="site-title">
-            <h1>Best Books!</h1>
+            <h1><a href="/">Best Books!</a></h1>
             <nav>
                 <a href="#" class="icon-menu navigation"></a>
             </nav>
