added functioning form

--- a/public/styles/base.css
+++ b/public/styles/base.css
@@ -1,8 +1,14 @@
+html {
+  min-height: 100%;
+}
+
 body {
   background-image: linear-gradient(to top, #d1cfda, #d7d5df, #dddbe4, #e3e1ea, #e9e7ef);
+  background-size: cover;
   color: #0B1B18;
   font-family: Quicksand, sans-serif;
   font-size: 20px;
+  min-height: 100%;
 }
 
 img {
@@ -11,7 +17,7 @@ img {
 
 h2 {
   font-weight: 700;
-}
+} 
 
 a,
 a:hover,
