--- a/public/styles/modules.css
+++ b/public/styles/modules.css
@@ -88,20 +88,24 @@ nav input[type="checkbox"]:checked ~ ul li {
   font-style: italic;
 }
 
-.book-card .button {
+.button {
   background-color: #53264A;
   border-radius: 2px;
+  border: none;
   box-shadow: 2px 2px 3px rgba(0,0,0,.2);
   color: white;
   display: block;
+  font-family: Quicksand;
+  font-size: 1em;
   margin: 1em auto;
   padding: 1em 1.5em;
   text-decoration: none;
   width: fit-content;
 }
 
-.book-card .button:hover {
+.button:hover {
   background-color: #142e33;
+  cursor: pointer;
 }
 
 .book_description {
@@ -119,12 +123,35 @@ nav input[type="checkbox"]:checked ~ ul li {
   font-style: italic;
 }
 
+/* new book form */
+
+input[type="text"],
+textarea {
+  display: block;
+  font-family: Quicksand;
+  font-size: 1em;
+  margin: .5em 0;
+  padding: .5em;
+  width: 100%;
+}
+
+.form-error {
+  border: 1px solid red;
+  color: red;
+}
+
+.form-error-message {
+  color: red;
+  display: none;
+}
+
 @media(min-width: 768px) {
   .book_description {
     margin: 2em;
     padding: 2em;
     text-align: justify;
   }
+
   /* nav menu */
   .icon-menu {
     display: none;
