--- a/views/partials/nav-menu.ejs
+++ b/views/partials/nav-menu.ejs
@@ -6,5 +6,6 @@
     <ul>
         <li><a href="/">Home</a></li>
         <li><a href="/search">Search</a></li>
+        <li><a href="/new">Add a New Book</a></li>
     </ul>
 </nav>
