--- a/views/pages/submit.ejs
+++ b/views/pages/submit.ejs
@@ -1,1 +1,3 @@
-Thanks for submitting! <a href="/" class="button">Home</a>
+Thanks for submitting! Here is your new book:    
+
+<%- include ../partials/book-card.ejs %>
