--- a/views/partials/book-card.ejs
+++ b/views/partials/book-card.ejs
@@ -3,11 +3,26 @@
     <li>
         <section class="book-card">
             <img src="<%= item.image_url %>">
+            
             <h1><%= item.title %></h1>
+
             <p class="author"><%= item.author %></p>
-            <% if (thisPage === 'pages/show.ejs'){ %><div class="book_description"><p><%= item.book_description %></p></div><p class="isbn">isbn: <%= item.isbn %></p><% } %>
-            <% if (thisPage === 'pages/home.ejs'){ %><a href="/show?book=<%= item.id %>" class="button view-details-button" id="<%= item.id %>">View Details</a><% } %>
-            <% if (thisPage === 'pages/show.ejs'){ %><a href="/" class="button view-details-button">Go back</a><% } %>
+
+            <% if ((thisPage === 'pages/show.ejs') || (thisPage === 'pages/submit.ejs')){ %>
+                <div class="book_description"><p><%= item.book_description %></p></div>
+                <p class="isbn">isbn: <%= item.isbn %></p>
+            <% } %>
+
+            <% if (thisPage === 'pages/home.ejs'){ %>
+                <a href="/show?book=<%= item.id %>" class="button view-details-button">View Details</a>
+            <% } %>
+
+            <% if ((thisPage === 'pages/show.ejs') || (thisPage === 'pages/submit.ejs')){ %>
+                <a href="/" class="button view-details-button">
+                    <% if(thisPage === 'pages/show.ejs' ){ %>Go back<% } %>
+                    <% if(thisPage === 'pages/submit.ejs' ){ %>Home<% } %>
+                </a>
+            <% } %>
         </section>
     </li>
 <% }); %>
