--- a/public/styles/modules.css
+++ b/public/styles/modules.css
@@ -13,6 +13,10 @@
   font-family: 'Permanent Marker';
 }
 
+.site-title h1 a:hover {
+  color: #d1cfda;
+}
+
 /* nav menu */
 
 nav input,
@@ -37,6 +41,11 @@ nav input[type="checkbox"] {
 nav li {
   display: none;
   font-size: 2em;
+}
+
+nav li a:hover,
+nav li a:active {
+  color: #d1cfda;
 }
 
 nav input[type="checkbox"]:checked ~ ul {
