--- a/views/pages/new.ejs
+++ b/views/pages/new.ejs
@@ -1,29 +1,28 @@
 <form method="POST" action="/new/submit">
     <div>
-        <label for="title">Title <span class="form-error-message">255 character limit</span><span class="form-empty-message">Cannot be empty</span></label>
-        <input type="text" id="title" name="title" />
+        <label for="title">Title</label>
+        <input type="text" id="title" name="title" required maxlength="255" />
     </div>
 
     <div>
-        <label for="author">Author <span class="form-error-message">255 character limit</span><span class="form-empty-message">Cannot be empty</span></label>
-        <input type="text" id="author" name="author" />
+        <label for="author">Author</label>
+        <input type="text" id="author" name="author" required maxlength="255" />
     </div>
 
     <div>
-        <label for="isbn">ISBN <span class="form-error-message">Please enter a valid ISBN</span><span class="form-empty-message">Cannot be empty</span></label>
-        <input type="text" id="isbn" name="isbn" />
+        <label for="isbn">ISBN</label>
+        <input type="number" id="isbn" name="isbn" required max="9999999999999" />
     </div>
 
     <div>
-        <label for="image_url">Cover Image URL <span class="form-error-message">Please enter a valid URL</span><span class="form-empty-message">Cannot be empty</span></label>
-        <input type="text" id="image_url" name="image_url" />
+        <label for="image_url">Cover Image URL</label>
+        <input type="url" id="image_url" name="image_url" required />
     </div>
 
     <div>
-        <label for="book_description">Book Description<span class="form-error-message">1000 word limit</span><span class="form-empty-message">Cannot be empty</span></label>
-        <textarea name="book_description" id="book_description" cols="30" rows="10"></textarea>
+        <label for="book_description">Book Description</label>
+        <textarea name="book_description" id="book_description" cols="30" rows="10" required maxlength="2000"></textarea>
     </div>
 
-    <span class="form-submit-error">Please check fields</span>
     <input type="submit" value="Submit!" class="button">
 </form>
