changed book_description to description on all pages

--- a/views/partials/book-card.ejs
+++ b/views/partials/book-card.ejs
@@ -9,7 +9,7 @@
             <p class="author"><%= item.author %></p>
 
             <% if ((thisPage === 'pages/show.ejs') || (thisPage === 'pages/submit.ejs')){ %>
-                <div class="book_description"><p><%= item.book_description %></p></div>
+                <div class="description"><p><%= item.description %></p></div>
                 <p class="isbn">isbn: <%= item.isbn %></p>
             <% } %>
 
