--- a/views/pages/new.ejs
+++ b/views/pages/new.ejs
@@ -20,9 +20,9 @@
     </div>
 
     <div>
-        <label for="book_description">Book Description</label>
-        <textarea name="book_description" id="book_description" cols="30" rows="10" required maxlength="2000"></textarea>
+        <label for="description">Book Description</label>
+        <textarea name="description" id="description" cols="30" rows="10" required maxlength="2000"></textarea>
     </div>
 
-    <input type="submit" value="Submit!" class="button">
+    <input type="submit" value="Add Book" class="button">
 </form>
