--- a/views/pages/search.ejs
+++ b/views/pages/search.ejs
@@ -1,15 +1,17 @@
-Search stuff
-
+<p>Enter your search query below, select whether you would like to search by title or author, and click "Submit". </p>
 <form action="/search/submit" method="post">
-    <label for="author">Author</label>
-    <input type="text" name="author" id="author" >
-    <label for="title">Title</label>
-    <input type="text" name="title" id="title" >
+    <label for="search-query">Search Query</label>
+    <input type="text" name="search-query" id="search-query" required />
     <fieldset>
         <legend>Search by...</legend>
-        <label for="search-by">Author</label>
-        <input type="radio" id="search-by-author" for="search-by">
-        <label for="search-by-title">Title</label>
-        <input type="radio" id="search-by-title" for="search-by">
+        <div>
+            <input type="radio" id="search-by-author" name="search-by" required />
+            <label for="search-by-author">Author</label>
+        </div>
+        <div>
+            <input type="radio" id="search-by-title" name="search-by" />
+            <label for="search-by-title">Title</label>
+        </div>
     </fieldset>
+    <input type="submit" value="Search" class="button">
 </form>
