--- a/views/pages/search.ejs
+++ b/views/pages/search.ejs
@@ -1,16 +1,16 @@
 <p>Enter your search query below, select whether you would like to search by title or author, and click "Submit". </p>
 <form action="/search/submit" method="post">
-    <label for="search-query">Search Query</label>
-    <input type="text" name="search-query" id="search-query" required />
+    <label for="searchquery">Search Query</label>
+    <input type="text" name="searchquery" id="searchquery" required />
     <fieldset>
         <legend>Search by...</legend>
         <div>
-            <input type="radio" id="search-by-author" name="search-by" required />
-            <label for="search-by-author">Author</label>
+            <input type="radio" id="searchByAuthor" name="searchBy" value="searchByAuthor" required />
+            <label for="searchByAuthor">Author</label>
         </div>
         <div>
-            <input type="radio" id="search-by-title" name="search-by" />
-            <label for="search-by-title">Title</label>
+            <input type="radio" id="searchByTitle" name="searchBy" value="searchByTitle" />
+            <label for="searchByTitle">Title</label>
         </div>
     </fieldset>
     <input type="submit" value="Search" class="button">
