--- a/views/pages/errors/searcherror.ejs
+++ b/views/pages/errors/searcherror.ejs
@@ -1,2 +1,2 @@
-There was an issue adding your book. 
+<p>Nothing found for '<%= searchQuery %>'.</p>
 <a href="javascript:history.back()" class="button">Back</a>
